Sustituidos literales "UTF-8" y "application/json" por constantes.